// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a test for TextFormality component renders the component in elementor in Free  1`] = `
.c1 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c0 {
  margin: 0 2px 0 4px;
}

<div
  className="yoast-text-formality"
>
  <div
    className="yoast-field-group__title"
  >
    <b>
      Text formality
    </b>
    <span
      className="yoast-badge c0 yoast-beta-badge"
    >
      Beta
    </span>
  </div>
  <div>
    <p>
      <b>
        Yoast SEO Premium
      </b>
       will help you assess the formality level of your text.
    </p>
    <a
      className="yoast-button yoast-button-upsell"
      href="https://yoa.st/formality-upsell-elementor"
      rel={null}
      target="_blank"
    >
      Unlock with Premium
      <span
        aria-hidden="true"
        className="yoast-button-upsell__caret"
      />
      <span
        className="c1"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>
  <p>
    <a
      href="https://yoa.st/formality-free"
      rel={null}
      target="_blank"
    >
      Read more about text formality.
      <span
        className="c1"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
</div>
`;

exports[`a test for TextFormality component renders the component in elementor in Premium  1`] = `
.c2 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c0 {
  margin: 0 2px 0 4px;
}

.c1 {
  color: #a4286a;
  font-weight: 600;
}

<div
  className="yoast-text-formality"
>
  <div
    className="yoast-field-group__title"
  >
    <b>
      Text formality
    </b>
    <span
      className="yoast-badge c0 yoast-beta-badge"
    >
      Beta
    </span>
  </div>
  <div>
    <p>
      Overall, your text appears to be 
      <span
        className="c1"
      >
        informal
      </span>
      .
    </p>
  </div>
  <p>
    <a
      href="https://yoa.st/formality"
      rel={null}
      target="_blank"
    >
      Read our article on text formality to learn more about how to change the formality level of a text.
      <span
        className="c2"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
</div>
`;

exports[`a test for TextFormality component renders the component in metabox in Free  1`] = `
.c1 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c0 {
  margin: 0 2px 0 4px;
}

<div
  className="yoast-text-formality"
>
  <div
    className="yoast-field-group__title"
  >
    <b>
      Text formality
    </b>
    <span
      className="yoast-badge c0 yoast-beta-badge"
    >
      Beta
    </span>
  </div>
  <div>
    <p>
      <b>
        Yoast SEO Premium
      </b>
       will help you assess the formality level of your text.
    </p>
    <a
      className="yoast-button yoast-button-upsell"
      href="https://yoa.st/formality-upsell-metabox"
      rel={null}
      target="_blank"
    >
      Unlock with Premium
      <span
        aria-hidden="true"
        className="yoast-button-upsell__caret"
      />
      <span
        className="c1"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>
  <p>
    <a
      href="https://yoa.st/formality-free"
      rel={null}
      target="_blank"
    >
      Read more about text formality.
      <span
        className="c1"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
</div>
`;

exports[`a test for TextFormality component renders the component in metabox in Premium  1`] = `
.c1 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c0 {
  margin: 0 2px 0 4px;
}

<div
  className="yoast-text-formality"
>
  <div
    className="yoast-field-group__title"
  >
    <b>
      Text formality
    </b>
    <span
      className="yoast-badge c0 yoast-beta-badge"
    >
      Beta
    </span>
  </div>
  <div>
    <p>
      Once you add a bit more copy, we'll be able to tell you the formality level of your text.
    </p>
  </div>
  <p>
    <a
      href="https://yoa.st/formality"
      rel={null}
      target="_blank"
    >
      Read our article on text formality to learn more about how to change the formality level of a text.
      <span
        className="c1"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
</div>
`;

exports[`a test for TextFormality component renders the component in sidebar in Free  1`] = `
.c1 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c0 {
  margin: 0 2px 0 4px;
}

<div
  className="yoast-text-formality"
>
  <div
    className="yoast-field-group__title"
  >
    <b>
      Text formality
    </b>
    <span
      className="yoast-badge c0 yoast-beta-badge"
    >
      Beta
    </span>
  </div>
  <div>
    <p>
      <b>
        Yoast SEO Premium
      </b>
       will help you assess the formality level of your text.
    </p>
    <a
      className="yoast-button yoast-button-upsell"
      href="https://yoa.st/formality-upsell-sidebar"
      rel={null}
      target="_blank"
    >
      Unlock with Premium
      <span
        aria-hidden="true"
        className="yoast-button-upsell__caret"
      />
      <span
        className="c1"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>
  <p>
    <a
      href="https://yoa.st/formality-free"
      rel={null}
      target="_blank"
    >
      Read more about text formality.
      <span
        className="c1"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
</div>
`;

exports[`a test for TextFormality component renders the component in sidebar in Premium  1`] = `
.c2 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c0 {
  margin: 0 2px 0 4px;
}

.c1 {
  color: #a4286a;
  font-weight: 600;
}

<div
  className="yoast-text-formality"
>
  <div
    className="yoast-field-group__title"
  >
    <b>
      Text formality
    </b>
    <span
      className="yoast-badge c0 yoast-beta-badge"
    >
      Beta
    </span>
  </div>
  <div>
    <p>
      Overall, your text appears to be 
      <span
        className="c1"
      >
        formal
      </span>
      .
    </p>
  </div>
  <p>
    <a
      href="https://yoa.st/formality"
      rel={null}
      target="_blank"
    >
      Read our article on text formality to learn more about how to change the formality level of a text.
      <span
        className="c2"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
</div>
`;

exports[`a test for TextFormality component renders the component in sidebar in Premium  2`] = `
.c1 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c0 {
  margin: 0 2px 0 4px;
}

<div
  className="yoast-text-formality"
>
  <div
    className="yoast-field-group__title"
  >
    <b>
      Text formality
    </b>
    <span
      className="yoast-badge c0 yoast-beta-badge"
    >
      Beta
    </span>
  </div>
  <div>
    <p>
      Once you add a bit more copy, we'll be able to tell you the formality level of your text.
    </p>
  </div>
  <p>
    <a
      href="https://yoa.st/formality"
      rel={null}
      target="_blank"
    >
      Read our article on text formality to learn more about how to change the formality level of a text.
      <span
        className="c1"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
</div>
`;
